[bdist_wheel]
universal = 0

[metadata]
requires_dist =
    botocore>=1.23.24,<1.24.0
    jmespath>=0.7.1,<1.0.0
    s3transfer>=0.5.0,<0.6.0

[options.extras_require]
crt = botocore[crt]>=1.21.0,<2.0a0

[flake8]
ignore = E203,E501,W503,W504
exclude =
    docs,
    boto3/compat.py,
    boto3/data,
    .changes
